# TensorRT-plugin-demo

./: LICENSE  README.md  model_symbolic.py
cuda_op/: centerpool.cpp  centerpool.py  centerpool_kernel.cu  setup.py
infer/: CMakeLists.txt  infer.cpp
plugin/: CMakeLists.txt  centerpool_plugin.cpp  centerpool_plugin.cu
